 * Print elapsed time for calls to hook-run if debugLevel >=1.

1.04

 * Replace obsolete package multicore by package parallel
   (requires R >= 2.14.0)

 * Use load-balancing (mc.preschedule = FALSE) in mclapply.

1.03

 * Use reg.finalizer to finish Rmpi properly without clobbering
   .Last().

 * Remove uses of deprecated as.real().

 * Nicer error handling in readParameters.

 * Add hypervolume (multi-objective) example.

 * Fix several bugs in the computation of similar candidates.

1.02

 * More concise output.

 * The parameters expName and expDescription are now useless and they
   were removed.

 * Faster computation of similar candidates (Jeremie Dubois-Lacoste
   and Leslie Perez).

 * Fix bug when saving instances in tunerResults$experiments.

 * irace.cmdline ("--help") does not try to quit R anymore.

1.01

 * Fix bug caused by file.exists (and possibly other functions)
   not handling directory names with a trailing backslash or slash on
   Windows.
 
 * Fix bug using per-instance parameters (Leslie Perez).

 * Fix bug when reading initial candidates from a file.