@@ -2,6 +2,6 @@ export(irace.version,irace.license)
 export(irace.cmdline,irace.usage,irace.main,irace)
 export(defaultConfiguration,checkConfiguration, printConfiguration,
        readConfiguration, buildCommandLine, readParameters,
-       candidates.print.command, candidates.print, removeCandidatesMetaData)
+       candidates.print.command, candidates.print, removeCandidatesMetaData, hook.run.default, hook.evaluate.default)
 # Commented out because of "Error : package 'Rmpi' does not have a name space"
 # import(Rmpi)
